# moonriver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOMEBREW.md  IMPLEMENTATION.md  JOB_BROWSER_IMPLEMENTATION.md  LICENSE-MIT  PHASE2_PROGRESS.md  PUBLISHING.md  QUICKSTART.md  README.md  RELEASING.md  ROADMAP_V0.2.0.md  SETUP.md  cliff.toml  moonriver.rb  moonriver.toml.example
.github/: DEPENDENCY_UPDATE.md  HOMEBREW_QUICKREF.md
.github/workflows/: docs.yml  publish.yml  release.yml
docs/: README.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: client.md  index.md  repl.md
docs/contributing/: development.md
docs/features/: command-history.md  emergency-stop.md  job-history-browser.md  position-bar.md  syntax-highlighting.md  tab-completion.md  temperature-bar.md
docs/guide/: configuration.md  getting-started.md  interactive-mode.md  multiple-printers.md  quick-start.md  scripting-mode.md  what-is-moonriver.md
docs/releases/: v0.2.0.md
examples/: parallel_printers.sh
scripts/: update_formula.sh
src/: cli.rs  config.rs  main.rs  moonraker.rs  repl.rs
src/tui/: app.rs  event.rs  mod.rs  modal.rs  printer.rs  stateful_list.rs  tabs.rs  ui.rs
src/tui/widgets/: console.rs  footer.rs  header.rs  help.rs  jobs.rs  main.rs  mod.rs  position.rs  position_bar.rs  system_info.rs  temperatures.rs
